killercoda/k8s/17-ds-hostpath-configurator.yaml
vim ds.yaml

apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: configurator
  namespace: configurator
  labels:
    k8s-app: configurator
spec:
  selector:
    matchLabels:
      name: configurator
  template:
    metadata:
      labels:
        name: configurator
    spec:
      containers:
      - name: configurator
        image: bash
        command: ["sh", "-c"]
        args: ["echo aba997ac-1c89-4d64 > /mount/config && sleep 1d"]
        volumeMounts:
        - name: volume
          mountPath: /mount
      volumes:
      - name: volume
        hostPath:
          path: /configurator

k create -f ds.yaml

k get ds -n configurator --watch
k get po -n configurator
k -n configurator exec configurator-8mxtx -- cat /mount/config
cat /configurator/config
