killercoda/k8s/9-ingress-create.yaml
k get deploy -n world
k -n world expose deploy/asia --port=80 --name=asia
k -n world expose deploy/europe --port=80 --name=europe

k -n world get svc
k get ingressClass
k get ingress -A
cat /etc/hosts


k get svc -A | grep -i NodePort
vim ingress.yaml

k apply -f - << EOF
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: world
  namespace: world
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "world.universe.mine"
    http:
      paths:
      - path: /europe
        pathType: Prefix
        backend:
          service:
            name: europe
            port:
              number: 80
      - path: /asia
        pathType: Prefix
        backend:
          service:
            name: asia
            port:
              number: 80
EOF

k create -f ingress.yaml

k -n world get ingress
k -n ingress-nginx describe svc/ingress-nginx-controller

curl http://172.30.1.2:30080
curl http://world.universe.mine:30080
curl http://world.universe.mine:30080/europe
curl http://world.universe.mine:30080/asia
